--- a/_includes/selected_projects.liquid
+++ b/_includes/selected_projects.liquid
@@ -62,7 +62,7 @@
         </div>
 
         <!-- Abstract or Description -->
-        <p style="margin-top: 10px;">
+        <p style="margin-top: 10px; text-align: justify;">
           {{ project.abstract | default: project.description }}
         </p>
       </div>
